--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,23 +7,23 @@ server.port=8000
 logging.level.org.springframework=info
 logging.level.org.zerock=debug
 
-#logging.level.org.springframework.security=trace
+logging.level.org.springframework.security=trace
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 
-#spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
-#spring.security.oauth2.client.provider.kakao.user-name-attribute=id
-#spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
-#spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 
-#spring.security.oauth2.client.registration.kakao.client-name=kakao
-#spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.kakao.redirect_uri=http://localhost:8080/login/oauth2/code/kakao
-#spring.security.oauth2.client.registration.kakao.client-id=6e80a225b24556d2b7759a26621f302f
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect_uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-id=6e80a225b24556d2b7759a26621f302f
 
-#spring.security.oauth2.client.registration.kakao.client-secret=WpmBWhqTH3hTeFMCuY9G4fOD2T5hW4jW
-#spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
-#spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+spring.security.oauth2.client.registration.kakao.client-secret=WpmBWhqTH3hTeFMCuY9G4fOD2T5hW4jW
+spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
