--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/webdb?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=webuser
-spring.datasource.password=webuser
-server.port=8000
-
 logging.level.org.springframework=info
 logging.level.org.zerock=debug
 
@@ -13,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-spring.config.import=classpath:kakao.properties
+spring.config.import=classpath:kakao.properties, db.properties
